--- a/SistemaVendas/build.xml
+++ b/SistemaVendas/build.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="All">
 
   <PropertyGroup>
@@ -11,11 +11,11 @@
 
 
   <PropertyGroup>
-    <TestProjectDll>"$(MSBuildProjectDirectory)\TesteVendas\bin\Debug\TesteVendas.dll"</TestProjectDll>
+    <TestProjectDll>"$(MSBuildProjectDirectory)\TestProject1\bin\Debug\TestProject1.dll"</TestProjectDll>
   </PropertyGroup>
 
   <PropertyGroup>
-    <TestProjectResultFile>"$(MSBuildProjectDirectory)\TesteVendas\resultado.trx"</TestProjectResultFile>
+    <TestProjectResultFile>"$(MSBuildProjectDirectory)\TestProject1\resultado.trx"</TestProjectResultFile>
   </PropertyGroup>
 
 
