adicionando codigo da calculadora de royalties

--- a/SistemaVendas/SistemaVendas/SistemaVendas.csproj
+++ b/SistemaVendas/SistemaVendas/SistemaVendas.csproj
@@ -44,8 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculadora.cs" />
+    <Compile Include="CalculadoraRoyalties.cs" />
+    <Compile Include="IVendaRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
