--- a/SistemaVendas/TestProject1/TestProject1.csproj
+++ b/SistemaVendas/TestProject1/TestProject1.csproj
@@ -34,6 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -47,12 +50,16 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TesteCalculadora.cs" />
+    <Compile Include="TesteCalculadoraRoyalties.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SistemaVendas\SistemaVendas.csproj">
       <Project>{7B7BA8AC-0967-4217-A556-122322713345}</Project>
       <Name>SistemaVendas</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
